<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/viewTextContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:background="@color/black">

        <TextView
            android:id="@+id/viewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v1_title"
            style="@style/viewOneTitle"/>

        <TextView
            android:id="@+id/viewSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTitle"
            android:text="@string/v1_sub_title"
            style="@style/viewOneSubTitle"/>

        <TextView
            android:id="@+id/viewText"
            android:layout_below="@id/viewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            style="@style/viewOneText"
            />

    </RelativeLayout>

</RelativeLayout>