<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/viewImageContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gabriella_wilde"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/viewTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/viewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v1_title"
                style="@style/viewOneTitle"/>

            <TextView
                android:id="@+id/viewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewTitle"
                android:text="@string/v1_sub_title"
                style="@style/viewOneSubTitle"/>

            <TextView
                android:id="@+id/viewText"
                android:layout_below="@id/viewSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                style="@style/viewOneText"
                />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>